# yet-another-ray-tracer

./: .gitignore  CMakeLists.txt  README.md
cmake/: yart-config.cmake.in
examples/: CMakeLists.txt  common.h.in  main.cpp
examples/rtiow/: CMakeLists.txt  main.cpp
examples/rttnw/: CMakeLists.txt  main.cpp
include/yart/camera/: perspective.h
include/yart/core/: camera.h  common.h  device.h  geometry.h  light.h  local_frame.h  material.h  renderer.h  sampler.h  scene.h  texture.h
include/yart/geometry/: box.h  instance.h  plane.h  sphere.h  user_geometry.h
include/yart/light/: area_light.h
include/yart/material/: dielectric.h  diffuse_light.h  lambertian.h  metal.h
include/yart/renderer/: debug_renderer.h  pathtracer.h
include/yart/texture/: checkboard.h  checkerboard.h  constant.h  image.h
src/: CMakeLists.txt
src/camera/: perspective.cpp
src/core/: camera.cpp  device.cpp  geometry.cpp  local_frame.cpp  material.cpp  renderer.cpp  sampler.cpp  scene.cpp
src/geometry/: box.cpp  instance.cpp  plane.cpp  sphere.cpp  user_geometry.cpp
src/light/: area_light.cpp
src/material/: dielectric.cpp  diffuse_light.cpp  lambertian.cpp  metal.cpp
src/renderer/: debug_renderer.cpp  pathtracer.cpp
src/texture/: checkboard.cpp  checkerboard.cpp  constant.cpp  image.cpp
src/util/: assert.h  macro.h  random.h  rayhit.h
